[gd_scene load_steps=14 format=3 uid="uid://yik7r83u5ky0"]

[ext_resource type="Script" uid="uid://c2fsnmmxr20v7" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://dcpj2klltlxf0" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://bg13j0aqrnxsx" path="res://scenes/diver_enemy.tscn" id="4_iywne"]
[ext_resource type="PackedScene" uid="uid://yc3bkarn8ayy" path="res://scenes/enemy.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://cqydb0s4u8a5u" path="res://scenes/hud.tscn" id="4_p57ef"]
[ext_resource type="AudioStream" uid="uid://dllegxse07a0k" path="res://audio/pewpew.mp3" id="4_vtaks"]
[ext_resource type="PackedScene" uid="uid://bufiurcq0b6j8" path="res://scenes/game_over_screen.tscn" id="5_p57ef"]
[ext_resource type="AudioStream" uid="uid://tve847nqd3jt" path="res://audio/mixkit-strong-punches-to-the-body-2198-[AudioTrimmer.com].mp3" id="5_vtaks"]
[ext_resource type="AudioStream" uid="uid://b8o2dbhqwmw2d" path="res://audio/explode67-[AudioTrimmer.com].mp3" id="6_vtaks"]
[ext_resource type="AudioStream" uid="uid://dyo24l8x852g3" path="res://audio/live lost-[AudioTrimmer.com].mp3" id="7_kvpfn"]
[ext_resource type="Texture2D" uid="uid://b0gcx1fik8a3e" path="res://art/67 (1).png" id="7_u5sy4"]
[ext_resource type="Script" uid="uid://drv0g6ht85rr8" path="res://scripts/no_ammo_label.gd" id="11_dinhu"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u5sy4"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(270, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
gravity = Vector3(0, 0, 0)

[node name="Game" type="Node2D"]
position = Vector2(-4, 4)
script = ExtResource("1_uwrxv")
enemy_scenes = Array[PackedScene]([ExtResource("4_lbhrr"), ExtResource("4_iywne")])

[node name="SFX" type="Node" parent="."]

[node name="Laser_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_vtaks")

[node name="Hit_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_vtaks")

[node name="Explode_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_vtaks")

[node name="LiveLost_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_kvpfn")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="PurpleStar" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("7_u5sy4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="StarsEffect" type="GPUParticles2D" parent="."]
position = Vector2(270, -67)
amount = 25
process_material = SubResource("ParticleProcessMaterial_u5sy4")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_p57ef")]
offset_bottom = 961.0

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_p57ef")]
visible = false

[node name="NoAmmoLabel" type="Label" parent="UILayer"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("11_dinhu")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(3, 2)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
